<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".PlayerActivity">

    <TextView
        android:id="@+id/activity_player_tv_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/rubik_medium"
        android:singleLine="true"
        android:text="@string/activity_player_nama_lagu"
        android:textColor="#FFF5F5F5"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_player_iv_album_art" />

    <TextView
        android:id="@+id/activity_player_tv_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rubik_light"
        android:singleLine="true"
        android:text="@string/activity_player_nama_penyanyi"
        android:textAllCaps="false"
        android:textColor="#FF9E9E9E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_player_tv_song" />

    <ImageView
        android:id="@+id/activity_player_iv_prev"
        android:layout_width="@dimen/media_control"
        android:layout_height="@dimen/media_control"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_prev" />

    <ImageView
        android:id="@+id/activity_player_iv_next"
        android:layout_width="@dimen/media_control"
        android:layout_height="@dimen/media_control"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_next" />

    <TextView
        android:id="@+id/activity_player_tv_duration_played"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/duration_placeholder"
        android:textColor="@color/duration_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_player_sb_progress" />

    <TextView
        android:id="@+id/activity_player_tv_duration_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/duration_placeholder"
        android:textColor="@color/duration_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_player_sb_progress" />

    <SeekBar
        android:id="@+id/activity_player_sb_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_player_tv_artist" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_player_fab_play_pause"
        android:layout_width="@dimen/media_control"
        android:layout_height="@dimen/media_control"
        android:layout_marginBottom="48dp"
        android:clickable="true"
        android:contentDescription="@string/play_pause_button"
        android:focusable="true"
        android:foregroundGravity="center"
        android:scaleType="fitXY"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity_player_iv_next"
        app:layout_constraintStart_toEndOf="@+id/activity_player_iv_prev"
        app:rippleColor="@color/brand_red_2"
        app:srcCompat="@drawable/ic_play"
        app:useCompatPadding="false" />

    <ImageView
        android:id="@+id/activity_player_iv_album_art"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/album_art"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/album_art_placeholder" />
</androidx.constraintlayout.widget.ConstraintLayout>