<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/audio_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/music_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/album_art"
            android:cropToPadding="false"
            android:padding="5dp"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/music_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:ellipsize="marquee"
                android:fontFamily="@font/rubik_medium"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/file_name"
                android:textColor="#FFF5F5F5"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/music_file_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/rubik_regular"
                android:gravity="bottom|end"
                android:text="@string/artist_name"
                android:textColor="#FF9E9E9E"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <TextView
            android:id="@+id/music_file_duration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center|end"
            android:text="@string/duration_placeholder"
            android:textColor="#ffcfcfcf" />
    </LinearLayout>
</LinearLayout>